--- a/index.css
+++ b/index.css
@@ -8,6 +8,13 @@
   padding: 0;
 }
 
+.game {
+  overflow: hidden;
+  max-width: 600px;
+  max-height: 450px;
+  position: relative;
+}
+
 .lava {
   background: rgb(255, 100, 100);
 }
